# peek

./: .gitignore  .replit  README.md  agent.md  build.gradle  gradlew  local.properties.example  replit.md  settings.gradle.kts
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  ghidra-decompiler-wiring.md  il2cpp-unity.md  peek-android.md  pseudocode-passes.md
.cache/replit/: toolchain.json
.cache/replit/env/: latest  latest.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  gen_aarch64_sla.yml  preview.yml  release.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/kyhsgeekcode/disassembler/: DocumentIntentFixtures.kt  InstrumentationIntentsRule.kt  MainActivityActionViewIntentFlowTest.kt  MainActivityActionViewProjectArchiveIntentFlowTest.kt  MainActivityAdvancedImportFlowTest.kt  MainActivityExtraStreamIntentFlowTest.kt  MainActivityImportEntryPointPowerUserModeTest.kt  MainActivityImportEntryPointStandardModeTest.kt  MainActivityProjectExportFlowTest.kt  MainActivitySafImportFlowTest.kt  MainActivitySmokeTest.kt  PowerUserModePreferenceRule.kt  ProjectStateCleanupRule.kt
app/src/main/: AndroidManifest.xml
app/src/main/animator/: function_item_animator.xml
app/src/main/cpp/: CMakeLists.txt  algo_detector.cpp  algo_detector.h  crash_handler.cpp  db_cache.cpp  db_cache.h  decompiler_bridge.cpp  decompiler_bridge.h  decompiler_core_stub.cpp  disassembler.cpp  disassembler.h  elf_parser.cpp  elf_parser.h  il2cpp_metadata.cpp  il2cpp_metadata.h  jni_annotator.cpp  jni_annotator.h  peek_architecture.cpp  peek_architecture.h  peek_jni.cpp  peek_load_image.cpp  peek_load_image.h  peek_scope.cpp  peek_scope.h  xref_detector.cpp  xref_detector.h
app/src/main/cpp/decompiler/: flow.cc  loadimage.cc  raw_arch.hh
app/src/main/java/com/kyhsgeekcode/: FileExtensions.kt  Util.kt
app/src/main/java/com/kyhsgeekcode/disassembler/: Analyzer.kt  FileDrawerListAdapter.kt  FileDrawerListItem.kt  MainActivity.kt  PermissionUtils.kt
app/src/main/java/com/kyhsgeekcode/disassembler/exporting/: ExportDocuments.kt
app/src/main/java/com/kyhsgeekcode/disassembler/importing/: AdvancedImportSourceCatalog.kt  ImportEntryPointCatalog.kt
app/src/main/java/com/kyhsgeekcode/disassembler/models/: Architecture.kt
app/src/main/java/com/kyhsgeekcode/disassembler/preference/: PowerUserModeSettings.kt  SettingsFragment.kt
app/src/main/java/com/kyhsgeekcode/disassembler/project/: ProjectDataStorage.kt  ProjectManager.kt
app/src/main/java/com/kyhsgeekcode/disassembler/ui/: FileDrawerTree.kt  MainPage.kt  MainTab.kt  MainTestTags.kt
app/src/main/java/com/kyhsgeekcode/disassembler/viewmodel/: MainViewModel.kt
app/src/main/java/com/kyhsgeekcode/filechooser/: NewFileChooserActivity.kt  NewFileChooserAdapter.kt
app/src/main/java/com/kyhsgeekcode/filechooser/model/: ExpandedFileCache.kt  FileItem.kt
app/src/main/java/com/nex/peek/: AnalysisActivity.kt  BulkDownloader.kt  DisassemblyActivity.kt  FunctionListActivity.kt  MainActivity.kt  PeekApplication.kt  PeekNative.kt  SymbolsActivity.kt  UnityLoaderActivity.kt  XrefActivity.kt
app/src/main/java/com/nex/peek/adapter/: FunctionAdapter.kt  FunctionCompactAdapter.kt  HexRowAdapter.kt  InstructionAdapter.kt  RecentProjectsAdapter.kt  SymbolAdapter.kt  ViewOptionAdapter.kt  XrefAdapter.kt
app/src/main/res/drawable/: bg_copy_btn.xml  bg_function_item.xml  bg_peek_watermark.xml  bg_search.xml  ic_copy.xml  ic_download.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_peek_logo.xml  ic_view_options.xml  scroll_hint_gradient.xml  scrollbar_thumb.xml
app/src/main/res/layout/: activity_analysis.xml  activity_disassembly.xml  activity_function_list.xml  activity_main.xml  activity_symbols.xml  activity_unity_loader.xml  activity_xref.xml  dialog_download_progress.xml  dialog_target_type.xml  fragment_disassembly.xml  fragment_hex.xml  fragment_pseudocode.xml  fragment_symbols_list.xml  item_function.xml  item_function_compact.xml  item_hex_row.xml  item_instruction.xml  item_recent_binary.xml  item_symbol.xml  item_xref.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/xml/: pref_settings.xml
app/src/main/res/xml-v30/: pref_settings.xml
app/src/test/java/com/kyhsgeekcode/: ArchiveDetectionTest.kt
app/src/test/java/com/kyhsgeekcode/disassembler/: AnalyzerStringSearchTest.kt  ArchiveExtractionTest.kt  FileChooserSortTest.kt  FileSelectionIntentPayloadTest.kt  MainActivityIntentHandlingTest.kt  PermissionUtilsTest.kt  ProjectExportArchiveTest.kt  ProjectManagerTest.kt
attached_assets/: Pasted--detected-XOR-with-constant-detection-may-be-wrong-dete_1782483828024.txt  Pasted-Cause-The-C-compiler-errors-come-from-peek-scope-h-decl_1782792354549.txt  Pasted-Context-I-m-building-an-Android-app-PEEK-for-ARM64-so-b_1782375615325.txt  Pasted-Failure-summary-The-Kotlin-compiler-failed-Unresolved-r_1782378927514.txt  Pasted-JNI-OnLoad-shows-correct-ASM-disassembly-but-fails-to-d_1782373442362.txt  Pasted-JNI-OnLoad-shows-correct-ASM-disassembly-but-fails-to-d_1782373497699.txt  Pasted-The-decompiler-pipeline-is-proven-end-to-end-on-two-rea_1782329711235.txt  Pasted-This-is-it-actual-proof-not-a-guess-RAW-BRIDGE-OUTPUT-l_1782626186360.txt  replit_prompt_v1_1782277026127.md  replit_prompt_v1_scratch_1782285418179.md  replit_prompt_v2_ui_fixes_1782288527291.md  replit_prompt_v3_fixes_1782291431181.md  replit_prompt_v4_decompiler_ui_1782298659752.md
docs/maintenance/: anonymization-and-security.md  backlog-triage.ko.md  implementation-log.ko.md  issue-triage.md  merge-close-checklist.ko.md  roadmap.md
docs/superpowers/plans/: 2026-03-19-power-user-import-mode.md
docs/superpowers/specs/: 2026-03-19-power-user-import-mode-design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
host_test/: bridge_test.cpp  decompile_test.cpp  jni_onload_test.cpp  real_jni_test.cpp
scripts/: fetch_ghidra_decomp.sh
(+43 files in other folders)
