cmake_minimum_required(VERSION 3.22.1)
project(peek_native CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)

# ---------------------------------------------------------------------------
# Capstone 5.0.1 — ARM64/AArch64 only, static, no tests/tools
# ---------------------------------------------------------------------------
set(CAPSTONE_ARCHITECTURE_DEFAULT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_ARM64_SUPPORT        ON  CACHE BOOL "" FORCE)
set(CAPSTONE_AARCH64_SUPPORT      ON  CACHE BOOL "" FORCE)
set(CAPSTONE_BUILD_SHARED_LIBS    OFF CACHE BOOL "" FORCE)
set(CAPSTONE_BUILD_TESTS          OFF CACHE BOOL "" FORCE)
set(CAPSTONE_BUILD_CSTOOL         OFF CACHE BOOL "" FORCE)
set(CAPSTONE_INSTALL              OFF CACHE BOOL "" FORCE)

FetchContent_Declare(
    capstone
    GIT_REPOSITORY https://github.com/capstone-engine/capstone.git
    GIT_TAG        5.0.1
    GIT_SHALLOW    TRUE
)
FetchContent_MakeAvailable(capstone)

# ---------------------------------------------------------------------------
# SQLite 3.46.1 amalgamation
# ---------------------------------------------------------------------------
FetchContent_Declare(
    sqlite3_amalgamation
    URL https://www.sqlite.org/2024/sqlite-amalgamation-3460100.zip
)
FetchContent_MakeAvailable(sqlite3_amalgamation)

add_library(sqlite3_lib STATIC
    ${sqlite3_amalgamation_SOURCE_DIR}/sqlite3.c
)
target_include_directories(sqlite3_lib PUBLIC
    ${sqlite3_amalgamation_SOURCE_DIR}
)
target_compile_options(sqlite3_lib PRIVATE
    -DSQLITE_THREADSAFE=1
    -DSQLITE_DEFAULT_WAL_SYNCHRONOUS=1
)

# ---------------------------------------------------------------------------
# decompiler_core — Ghidra standalone decompiler (Ghidra_12.1.2_build)
#
# The decompiler/ directory is NOT committed.  It is fetched from GitHub
# and the adjustVma patch is applied before Gradle runs CMake.
# See: .github/workflows/build.yml  and  scripts/fetch_ghidra_decomp.sh
#
# We glob all .cc files and exclude:
#   ruleparse.cc        — generated by bison below, not present in source
#   bfd_arch.cc         — requires <bfd.h> (GNU binutils, not in NDK)
#   loadimage_bfd.cc    — same
# On Android only:
#   analyzesigs.cc      — #includes loadimage_bfd.hh
#   codedata.cc         — same
# ---------------------------------------------------------------------------

if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/decompiler")
    message(FATAL_ERROR
        "decompiler/ directory is missing.\n"
        "Run ./scripts/fetch_ghidra_decomp.sh first, or let CI fetch it.\n"
        "See .github/workflows/build.yml for the automated step.")
endif()

find_package(BISON REQUIRED)

BISON_TARGET(
    GhidraRuleParser
    ${CMAKE_CURRENT_SOURCE_DIR}/decompiler/ruleparse.y
    ${CMAKE_CURRENT_BINARY_DIR}/decompiler/ruleparse.cc
    DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/decompiler/ruleparse.hh
    COMPILE_FLAGS "-p ruleparse"
)

# Glob everything in decompiler/ — no individual filenames hardcoded.
file(GLOB _decomp_cc "${CMAKE_CURRENT_SOURCE_DIR}/decompiler/*.cc")

# Remove generated and NDK-incompatible files from the glob.
list(FILTER _decomp_cc EXCLUDE REGEX ".*/ruleparse\\.cc$")
list(FILTER _decomp_cc EXCLUDE REGEX ".*/bfd_arch\\.cc$")
list(FILTER _decomp_cc EXCLUDE REGEX ".*/loadimage_bfd\\.cc$")
if(ANDROID)
    list(FILTER _decomp_cc EXCLUDE REGEX ".*/analyzesigs\\.cc$")
    list(FILTER _decomp_cc EXCLUDE REGEX ".*/codedata\\.cc$")
endif()

add_library(decompiler_core STATIC
    ${_decomp_cc}
    ${BISON_GhidraRuleParser_OUTPUTS}
)

target_include_directories(decompiler_core PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/decompiler
    ${CMAKE_CURRENT_BINARY_DIR}/decompiler
)

target_compile_options(decompiler_core PRIVATE
    -Wall
    -Wextra
    # No -fno-exceptions / -fno-rtti: Ghidra decompiler requires both.
)

# ---------------------------------------------------------------------------
# peek_native shared library
# ---------------------------------------------------------------------------
add_library(peek_native SHARED
    elf_parser.cpp
    disassembler.cpp
    xref_detector.cpp
    db_cache.cpp
    peek_load_image.cpp
    peek_scope.cpp
    peek_architecture.cpp
    decompiler_bridge.cpp
    jni_annotator.cpp
    algo_detector.cpp
    crash_handler.cpp
    il2cpp_metadata.cpp
    peek_jni.cpp
)

# These files wrap Ghidra headers — need exceptions + RTTI.
set_source_files_properties(
    peek_load_image.cpp
    peek_scope.cpp
    peek_architecture.cpp
    decompiler_bridge.cpp
    PROPERTIES COMPILE_FLAGS "-fexceptions -frtti"
)

target_include_directories(peek_native PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/decompiler
    ${CMAKE_CURRENT_BINARY_DIR}/decompiler
    ${capstone_SOURCE_DIR}/include
    ${sqlite3_amalgamation_SOURCE_DIR}
)

target_link_libraries(peek_native
    decompiler_core
    capstone
    sqlite3_lib
    android
    log
    z
)

target_compile_options(peek_native PRIVATE
    -Wall
    -Wextra
    -fno-exceptions
    -fno-rtti
)
